{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 316,
  "lineage": "9506ba67-c48f-bc47-86fa-793445b13590",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "yuran-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b312da38e77dd5a2",
            "domain": "vpc",
            "id": "eipalloc-0b312da38e77dd5a2",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-218-173.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.218.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab8d3a67dfe6398",
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:instance/i-0bf0adae85dc0a693",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf0adae85dc0a693",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "yuran",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b22cd8ad3a26342",
            "private_dns": "ip-10-10-2-124.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c09e90c921ab291a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00315fe9412fde7be",
            "tags": {
              "Name": "apache-web-server-a"
            },
            "tags_all": {
              "Name": "apache-web-server-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9d47339f1839330"
            ]
          },
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab8d3a67dfe6398",
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:instance/i-0e2182df3a83deb0d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2182df3a83deb0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "yuran",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0374c7687ea860a0c",
            "private_dns": "ip-10-10-3-26.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db9fa7fec08ba90b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bc1b8894e330651",
            "tags": {
              "Name": "apache-web-server-c"
            },
            "tags_all": {
              "Name": "apache-web-server-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9d47339f1839330"
            ]
          },
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c8f3f68c379ed6c1",
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:instance/i-09b7a0a85cc020417",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b7a0a85cc020417",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yuran",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0164b8b8b3a023098",
            "private_dns": "ip-10-10-0-55.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.55",
            "public_dns": "ec2-3-36-57-124.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.57.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fb3487f3f3a53ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063794c34e118cca2",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b209d3f6f436c9"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab8d3a67dfe6398",
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:instance/i-039f88dd295111115",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039f88dd295111115",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "yuran",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e86563fa87f31301",
            "private_dns": "ip-10-10-4-38.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0468afe82409c9cce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b7b044166eb1f82",
            "tags": {
              "Name": "tomcat-was-server-a"
            },
            "tags_all": {
              "Name": "tomcat-was-server-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cee464f7a3f3f73"
            ]
          },
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.internal-alb-sg",
            "aws_security_group.was-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab8d3a67dfe6398",
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:instance/i-08c6e51eac71516e8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c6e51eac71516e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "yuran",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f4d5372d36a11a0",
            "private_dns": "ip-10-10-5-218.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.5.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ecb38fa4afa3fb0b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c1900117d800a88",
            "tags": {
              "Name": "tomcat-was-server-c"
            },
            "tags_all": {
              "Name": "tomcat-was-server-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cee464f7a3f3f73"
            ]
          },
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.internal-alb-sg",
            "aws_security_group.was-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "yuran-test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:internet-gateway/igw-0635273c201a90b25",
            "id": "igw-0635273c201a90b25",
            "owner_id": "970698899539",
            "tags": {
              "Name": "yuran-test-igw"
            },
            "tags_all": {
              "Name": "yuran-test-igw"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ex-lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:970698899539:targetgroup/external-lb-tg/3f32c715b3c25c79",
            "arn_suffix": "targetgroup/external-lb-tg/3f32c715b3c25c79",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:970698899539:targetgroup/external-lb-tg/3f32c715b3c25c79",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "external-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "yuran-test-exelb-tg"
            },
            "tags_all": {
              "Name": "yuran-test-exelb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:970698899539:targetgroup/internal-lb-tg/9de330e2934680e3",
            "arn_suffix": "targetgroup/internal-lb-tg/9de330e2934680e3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:970698899539:targetgroup/internal-lb-tg/9de330e2934680e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-lb-tg",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "yuran-test-inelb-tg"
            },
            "tags_all": {
              "Name": "yuran-test-inelb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-lb-attach-resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal-alb-attach-resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0635273c201a90b25",
            "id": "r-rtb-0e5727d218278bd7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5727d218278bd7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.yuran-test-igw",
            "aws_route_table.public-rtb",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:route-table/rtb-0428da0c9000d727f",
            "id": "rtb-0428da0c9000d727f",
            "owner_id": "970698899539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yuran-test-Private-Route-Table"
            },
            "tags_all": {
              "Name": "yuran-test-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:route-table/rtb-0e5727d218278bd7a",
            "id": "rtb-0e5727d218278bd7a",
            "owner_id": "970698899539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yuran-test-public-Route-Table"
            },
            "tags_all": {
              "Name": "yuran-test-public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a3aa1a43f4bdb23",
            "route_table_id": "rtb-0428da0c9000d727f",
            "subnet_id": "subnet-00315fe9412fde7be"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.DB",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f546c784c1f0c9a5",
            "route_table_id": "rtb-0428da0c9000d727f",
            "subnet_id": "subnet-09bc1b8894e330651"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.DB",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05413feed4cd1855f",
            "route_table_id": "rtb-0428da0c9000d727f",
            "subnet_id": "subnet-06b7b044166eb1f82"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.DB",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c5d2969bee4cf90",
            "route_table_id": "rtb-0428da0c9000d727f",
            "subnet_id": "subnet-08c1900117d800a88"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.DB",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b3105420517cdae",
            "route_table_id": "rtb-0428da0c9000d727f",
            "subnet_id": "subnet-054484e91230a9db8"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.DB",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bafd146fb8c1f17",
            "route_table_id": "rtb-0428da0c9000d727f",
            "subnet_id": "subnet-07da191180f12f904"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.DB",
            "aws_subnet.private",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac03d0f4705220f9",
            "route_table_id": "rtb-0e5727d218278bd7a",
            "subnet_id": "subnet-063794c34e118cca2"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f78485cc7f2cff",
            "route_table_id": "rtb-0e5727d218278bd7a",
            "subnet_id": "subnet-0b5663e9a66cb9cec"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "External-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:security-group/sg-0db34911f9bd8c914",
            "description": "Internet facing alb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db34911f9bd8c914",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "External-alb-sg",
            "name_prefix": "",
            "owner_id": "970698899539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yuran-test-exelb-sg"
            },
            "tags_all": {
              "Name": "yuran-test-exelb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:security-group/sg-0a0b209d3f6f436c9",
            "description": "Allow remote SSH connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0b209d3f6f436c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_bastion_sg",
            "name_prefix": "",
            "owner_id": "970698899539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yuran-test-Bastion-SG"
            },
            "tags_all": {
              "Name": "yuran-test-Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:security-group/sg-0bafee7d9c7aec966",
            "description": "database security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bafee7d9c7aec966",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cee464f7a3f3f73"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0b209d3f6f436c9"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0b209d3f6f436c9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "970698899539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.internal-alb-sg",
            "aws_security_group.was-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:security-group/sg-0061521bdaf09997e",
            "description": "Internal ALB Between Web-App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0061521bdaf09997e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9d47339f1839330"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9d47339f1839330"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal-alb-sg",
            "name_prefix": "",
            "owner_id": "970698899539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yuran-test-inelb-sg"
            },
            "tags_all": {
              "Name": "yuran-test-inelb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:security-group/sg-03cee464f7a3f3f73",
            "description": "was sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cee464f7a3f3f73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.10.5.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0b209d3f6f436c9"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0061521bdaf09997e"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0b209d3f6f436c9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "was-sg",
            "name_prefix": "",
            "owner_id": "970698899539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yuran-test-was-sg"
            },
            "tags_all": {
              "Name": "yuran-test-was-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.internal-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:security-group/sg-0f9d47339f1839330",
            "description": "web server sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.5.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0f9d47339f1839330",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db34911f9bd8c914"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0b209d3f6f436c9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-web-sg",
            "name_prefix": "",
            "owner_id": "970698899539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yuran-test-web-sg"
            },
            "tags_all": {
              "Name": "yuran-test-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.External-alb-sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-054484e91230a9db8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054484e91230a9db8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-DBSubnet-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "yuran-test-DBSubnet-ap-northeast-2a"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-07da191180f12f904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07da191180f12f904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-DBSubnet-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "yuran-test-DBSubnet-ap-northeast-2c"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-00315fe9412fde7be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00315fe9412fde7be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-PrivateSubnet-0-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "yuran-test-PrivateSubnet-0-ap-northeast-2a"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-09bc1b8894e330651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bc1b8894e330651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-PrivateSubnet-1-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "yuran-test-PrivateSubnet-1-ap-northeast-2c"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-06b7b044166eb1f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b7b044166eb1f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-PrivateSubnet-2-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "yuran-test-PrivateSubnet-2-ap-northeast-2a"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-08c1900117d800a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c1900117d800a88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-PrivateSubnet-3-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "yuran-test-PrivateSubnet-3-ap-northeast-2c"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-063794c34e118cca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063794c34e118cca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-PublicSubnet-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "yuran-test-PublicSubnet-ap-northeast-2a"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:subnet/subnet-0b5663e9a66cb9cec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5663e9a66cb9cec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970698899539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yuran-test-PublicSubnet-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "yuran-test-PublicSubnet-ap-northeast-2c"
            },
            "vpc_id": "vpc-0f8106c043c9c1903"
          },
          "dependencies": [
            "aws_vpc.yuran-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "yuran-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970698899539:vpc/vpc-0f8106c043c9c1903",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a730cc94f9ce6783",
            "default_route_table_id": "rtb-029d7866eaa6894d4",
            "default_security_group_id": "sg-02c26798acbf1bc7a",
            "dhcp_options_id": "dopt-0d00627d05a1b0af0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8106c043c9c1903",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029d7866eaa6894d4",
            "owner_id": "970698899539",
            "tags": {
              "Name": "yuran-test-VPC"
            },
            "tags_all": {
              "Name": "yuran-test-VPC"
            }
          }
        }
      ]
    }
  ]
}